--- a/emp_app/templates/index.html
+++ b/emp_app/templates/index.html
@@ -23,7 +23,7 @@
         <h1 class="container">Office Employment Management System!</h1>
         <hr>
        
-        <a class="btn btn-warning btn-lg" href="/view_all_emp" role="button">View All Employee</a>
+        <a class="btn btn-warning btn-lg" href="/all_emp" role="button">View All Employee</a>
         <hr>
         <a class="btn btn-warning btn-lg" href="/add_emp" role="button">Add An Employee</a>
         <hr>
